@@ -1,5 +1,9 @@
 2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/kb.cpp :
+
+	  - Added constraints in generate_nlp().
+
 	* kb/consttab.h :
 	* kb/consttab.cpp :
 
